crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__class_type_parameters.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtClassDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - StmtExpr
    - ExprConstant

