crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__compare.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtExpr
  - ExprCompare
    - ExprConstant
    - Lt
    - Lt
    - ExprName
    - ExprConstant

