crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__decorators.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtFunctionDef
  - ExprName
  - Arguments
  - StmtPass
- StmtClassDef
  - ExprName
  - StmtPass

