crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__dict_comprehension.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtExpr
  - ExprDictComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
    - ExprBinOp
      - ExprName
      - Pow
      - ExprConstant

