crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtFunctionDef
  - Arguments
    - ExprConstant
    - ExprConstant
    - Arg
    - Arg
    - Arg
    - Arg
  - StmtPass

