crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__function_type_parameters.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtFunctionDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - Arguments
  - StmtExpr
    - ExprConstant

