crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__list_comprehension.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtExpr
  - ExprListComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName

