crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__match_class_pattern.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtMatch
  - ExprName
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprConstant
      - PatternMatchValue
        - ExprConstant
    - StmtExpr
      - ExprConstant
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprConstant
      - PatternMatchValue
        - ExprConstant
      - PatternMatchValue
        - ExprConstant
    - StmtExpr
      - ExprConstant

