crates/ruff_python_ast/src/snapshots/ruff_python_ast__visitor__tests__type_aliases.snap
---
source: crates/ruff_python_ast/src/visitor.rs
expression: trace
---
- StmtTypeAlias
  - ExprSubscript
    - ExprName
    - ExprName
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - ExprName

